--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,9 @@
 
         <hutool.version>5.8.20</hutool.version>
         <guava.version>32.1.1-jre</guava.version>
+        <mysql.version>8.0.32</mysql.version>
+        <mybatis-plus.version>3.4.1</mybatis-plus.version>
+
     </properties>
 
     <dependencyManagement>
@@ -52,6 +55,17 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.mysql</groupId>
+                <artifactId>mysql-connector-j</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus</artifactId>
+                <version>${mybatis-plus.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
